# poc-cesg-poi-search

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
deploy/: knative-service.yaml
docs/: index.html
examples/: queries.json  sample-manifest.json  tokyo.env
k8s/: ksvc.yaml
scripts/: build_duckdb_asset.py  build_poi_documents.py  deploy_static_assets.sh  export_stac_item.py  smoke_test_api.py
sql/: 001_create_tables.sql  002_create_fts_index.sql  003_search.sql
src/poc_cesg_poi_search/: __init__.py  app.py  config.py  db.py  manifest.py  quadkey.py  search.py  stac.py  tokenizer.py
tests/: test_manifest.py  test_quadkey.py  test_search_api.py  test_tokenizer.py
